err/demo.app.openmember.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/betahaus'...
Listing './lib/python3.5/site-packages/betahaus/openmember'...
Listing './lib/python3.5/site-packages/betahaus/openmember/browser'...
Listing './lib/python3.5/site-packages/betahaus/openmember/content'...
Listing './lib/python3.5/site-packages/betahaus/openmember/locales'...
Listing './lib/python3.5/site-packages/betahaus/openmember/locales/sv'...
Listing './lib/python3.5/site-packages/betahaus/openmember/locales/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/betahaus/openmember/portlets'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles/default'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles/default/types'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles/organisationcontent'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles/organisationcontent/types'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles/personcontent'...
Listing './lib/python3.5/site-packages/betahaus/openmember/profiles/personcontent/types'...
Listing './lib/python3.5/site-packages/betahaus/openmember/skins'...
Listing './lib/python3.5/site-packages/betahaus/openmember/tests'...
Listing './lib/python3.5/site-packages/betahaus/openmember/upgrades'...
Listing './lib/python3.5/site-packages/betahaus.openmember-0.2b0.egg-info'...
Listing './lib/python3.5/site-packages/demo'...
Listing './lib/python3.5/site-packages/demo/app'...
Listing './lib/python3.5/site-packages/demo/app/openmember'...
Listing './lib/python3.5/site-packages/demo/app/openmember/Extensions'...
Compiling './lib/python3.5/site-packages/demo/app/openmember/Extensions/add_memberships.py'...
***   File "./lib/python3.5/site-packages/demo/app/openmember/Extensions/add_memberships.py", line 28
    print 'Fetched %s FiscalYear objects' % len(brains)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/demo/app/openmember/Extensions/add_random_memberships.py'...
***   File "./lib/python3.5/site-packages/demo/app/openmember/Extensions/add_random_memberships.py", line 30
    print 'Fetched %s FiscalYear objects' % len(brains)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/demo/app/openmember/Extensions/create_demomembers.py'...
***   File "./lib/python3.5/site-packages/demo/app/openmember/Extensions/create_demomembers.py", line 62
    print "Added item %s to %s" % (i,self.Title())
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/demo/app/openmember/content'...
Listing './lib/python3.5/site-packages/demo/app/openmember/profiles'...
Listing './lib/python3.5/site-packages/demo/app/openmember/profiles/default'...
Listing './lib/python3.5/site-packages/demo/app/openmember/profiles/default/types'...
Listing './lib/python3.5/site-packages/demo.app.openmember-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
